--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,8 +18,8 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="theme_primary">#d20d4f</color>
-    <color name="theme_primary_dark">#b70b28</color>
-    <color name="theme_accent">#2086f4</color>
+    <color name="theme_primary">#6200EE</color>
+    <color name="theme_primary_dark">#3700B3</color>
+    <color name="theme_accent">#03DAC5</color>
     <color name="ltgray">#ffe0e0e0</color>
 </resources>
